# gb-emu

./: AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  TESTING.md
scripts/: build-sdl.sh  build.sh  run-mooneye.sh  serve.sh  setup.sh  test.sh
src/core/: apu.c  cartridge.c  cpu.c  gameboy.c  gameboy.h  mmu.c  oam.c  ppu.c  serial.c  timer.c
src/platform/: native.c  platform.h  sdl.c  wasm.c
tests/: test_cartridge.c  test_cpu.c  test_framework.h  test_integration.c  test_main.c  test_mmu.c  test_mooneye_runner.c  test_ppu.c
web/: app.js  index.html  style.css
